tag pages chhanges

--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/SeoParametrs/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/SeoParametrs/Edit.cshtml
@@ -33,6 +33,7 @@
         <li><a class="4" href="~/cabinet/districts/list">Районы</a></li>
         <li><a class="preActive active" href="~/cabinet/seoparametrs/list">SEO параметры</a></li>
         <li><a class="4" href="~/cabinet/texts/list">Тексты</a></li>
+        <li><a class="4" href="~/cabinet/tagpages/list">Страницы теги</a></li>
     </ul>
 </div>
 <div id="adminka1" class="tabset_content tabset_content_active">
