--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Texts/List.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Texts/List.cshtml
@@ -35,6 +35,7 @@
         <li><a class="4" href="~/cabinet/districts/list">Районы</a></li>
         <li><a class="4" href="~/cabinet/seoparametrs/list">SEO параметры</a></li>
         <li><a class="preActive active" href="~/cabinet/texts/list">Тексты</a></li>
+        <li><a class="4" href="~/cabinet/tagpages/list">Страницы теги</a></li>
     </ul>
 </div>
 <div id="adminka2" class="tabset_content">
