--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -303,9 +303,12 @@
             </div>
         </div>
         <div class="search">
-            <p><form class="form-search" method="get" action="/search" target="_blank"><input type="text" name="q" placeholder="Введите слово или фразу" value="" />
+            <p>
+                <form class="form-search" method="get" action="/search/flats" target="_blank">
+                    <input type="text" name="query" placeholder="Введите слово, фразу или id объекта" value="" />
                     <input type="submit" value="">
-                    </form></p>
+                </form>
+            </p>
         </div>
     </div>
     <div class="container" id="container">
