--- a/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
@@ -123,7 +123,7 @@
                 }
                 else
                 {
-                    <div>@Html.Raw(main.Description)</div>
+                    <div id="text_@main.Id">@Html.Raw(main.Description)</div>
                 }
             }
         }
