--- a/ReHouse.FrontEnd/Views/Rent/Flat.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Flat.cshtml
@@ -67,7 +67,7 @@
                 }
                 else
                 {
-                    <div>@Html.Raw(main.Description)</div>
+                    <div id="text_@main.Id">@Html.Raw(main.Description)</div>
                 }
             }
         }
