--- a/ReHouse.FrontEnd/Views/Sale/Flat.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Flat.cshtml
@@ -1,8 +1,10 @@
 ﻿@using ReHouse.FrontEnd.Models
 @using ReHouse.Utils.DataBase.Common
+@using ReHouse.Utils.DataBase.AdvertParams
 @model LoadAdvertsModel
 @{
     List<PageText> texts = ViewBag.PageTexts as List<PageText>;
+    List<TagPage> tagPages = ViewBag.TagPages as List<TagPage>;
 }
 <span class="none">
 
@@ -46,13 +48,22 @@
             <a id="more">Больше объявлений</a>
         </div>
     </div>
-        <div id="loading-div">
+    <div id="loading-div">
 
-        </div>
+    </div>
 }
-        @*<div id="mapnovostroy">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d101681.05935008111!2d30.6809567124572!3d46.42350678371972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0L7QtNC10YHRgdCwINC20LXQvNGH0YPQttC40L3Riw!5e0!3m2!1sru!2sua!4v1485299309010" width="1065px" height="495px" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>*@
+    @*<div id="mapnovostroy">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d101681.05935008111!2d30.6809567124572!3d46.42350678371972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0L7QtNC10YHRgdCwINC20LXQvNGH0YPQttC40L3Riw!5e0!3m2!1sru!2sua!4v1485299309010" width="1065px" height="495px" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>*@
+    @if (tagPages != null && tagPages.Count > 0)
+    {
+        <div class="tags">
+            @foreach (var tag in tagPages)
+            {
+                <a href="/special/sale/@tag.ShortName">@tag.RussianName (@tag.Quantity)</a>
+            }
+        </div>
+    }
     <div class="seotext">
         @if (texts != null)
         {
@@ -67,10 +78,10 @@
                 }
                 else
                 {
-                    <div>@Html.Raw(main.Description)</div>
+                    <div id="text_@main.Id">@Html.Raw(main.Description)</div>
                 }
             }
         }
     </div>
 
-        @Scripts.Render("~/bundles/advertSettings")
+    @Scripts.Render("~/bundles/advertSettings")
