--- a/ReHouse.FrontEnd/Content/mobile.css
+++ b/ReHouse.FrontEnd/Content/mobile.css
@@ -1,4 +1,11 @@
 @media (max-width: 1499px) and (min-width: 769px) {
+.tags {
+	    max-width: 1065px;
+    margin-left: 0px;
+    margin-top: 45px;
+    margin-bottom: 82px;
+    text-align: center;
+}
 .your_name {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -22,7 +29,7 @@
      margin-right: 0; 
 }
 .form-search {
-    margin-left: -46px;
+    margin-left: -60px;
 }
 .contactinfo .tel {
      margin-left: 0px; 
@@ -145,7 +152,7 @@
     padding: 10px 27px 10px 27px;
 }
 .h2novostroy .favorite {
-    left: 790px;
+    left: 793px;
 }
 .h2novostroy .favorite1 {
     left: 875px;
@@ -239,6 +246,13 @@
 
 @media (max-width: 768px){
 
+.tags {
+	max-width: 1065px;
+    margin-left: 0px;
+        margin-top: 45px;
+    margin-bottom: 82px;
+    text-align: center;
+}
 .h2novostroy .favorite {
     position: absolute;
     top: 37px;
@@ -253,6 +267,7 @@
     border: 1px solid white;
     color: white;
     font-family: "Century Gothic";
+    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
     font-size: 14px;
     font-weight: 700;
     text-decoration: none;
@@ -371,7 +386,7 @@ display:none;
     font-size: 18px;
     text-transform: uppercase;
     width: 100%;
-    padding: 10px 0 10px 0;
+    padding: 10px 0 7px 0;
   }
 
 .hidden-menu a:hover {
@@ -704,17 +719,10 @@ margin-top: 35px;
 margin-left: 0;
     margin-top: 30px;
 }
-
 .h2novostroy {
 text-align: center;
 display: block;
 }
-
-
-
-
-
-
 .selection {
   margin-left: 0;
   flex-direction: column;
@@ -726,9 +734,6 @@ display: block;
   width: 400px;
   margin-bottom: 12px;
 }
-
-
-
 .selection1 {
   margin-left: 0;
   flex-direction: column;
@@ -740,17 +745,6 @@ display: block;
   width: 400px;
   margin-bottom: 12px;
 }
-
-
-
-
-
-
-
-
-
-
-
 .search-button {
 width: 768px;
 text-align: center;
@@ -806,7 +800,6 @@ width: 768px;
   margin-left: 30px;
 }
 
-
 #mapnovostroy {
   display: none;  
 }
@@ -826,12 +819,6 @@ width: 768px;
   width: 730px;
   /*padding: 0 19px 0 19px;*/
 }
-
-
-
-
-
-
 
 #products_example {
   display: none;
@@ -1210,6 +1197,14 @@ font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 /*480*/
 
 @media (max-width: 480px){
+
+.tags {
+	max-width: 1065px;
+    margin-left: 0px;
+        margin-top: 45px;
+    margin-bottom: 82px;;
+    text-align: center;
+}
 .container {
   width: 480px;
   }
@@ -1258,7 +1253,7 @@ body {
     font-size: 18px;
     text-transform: uppercase;
     width: 100%;
-    padding: 10px 0 10px 0;
+    padding: 10px 0 7px 0;
   }
 
 .hidden-menu a:hover {
@@ -1383,7 +1378,7 @@ background-color: #0a2a5d;
 .header_mobile .header .contactinfo .tel {
        display: flex;
     flex-direction: row;
-    margin-left: 8px;
+    margin-left: 2px;
     margin-top: 11px;
     font-size: 17px;
 }
@@ -2157,6 +2152,14 @@ font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 
 
 @media (max-width: 415px){
+.tags {
+	max-width: 1065px;
+    margin-left: 0px;
+      margin-top: 45px;
+    margin-bottom: 82px;
+    text-align: center;
+}
+
 .container {
  max-width: 320px;
     }
@@ -2579,6 +2582,13 @@ font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 .seotext3 {
     margin-top: 20px;
 }
+
+
+
+
+
+
+
 
 
 
