--- a/ReHouse.FrontEnd/Views/Cart/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Cart/Index.cshtml
@@ -3,11 +3,11 @@
 
 <div class="navigation_string">
     <div class="way">
-        @Html.ActionLink("Главная", "index", "home")
+        <a href="/">Главная</a>
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("Избранное", "index", "cart")
+        <a href="/cart">Избранное</a>
     </div>
 </div>
 <div class="h2novostroy"><h2>Избранные объявления</h2></div>
