--- a/ReHouse.FrontEnd/Views/Feedback/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Feedback/Index.cshtml
@@ -55,11 +55,11 @@
 
 <div class="navigation_string">
     <div class="way">
-        @Html.ActionLink("Главная", "index", "home")
+        <a href="/">Главная</a>
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("Отзывы", "index", "feedback")
+        <a href="/feedback">Отзывы</a>
     </div>
 </div>
 
