--- a/ReHouse.FrontEnd/Views/Home/About.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/About.cshtml
@@ -13,11 +13,11 @@
 }
 <div class="navigation_string">
     <div class="way">
-        @Html.ActionLink("Главная", "index", "home")
+        <a href="/">Главная</a>
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("О компании", "about", "home")
+        <a href="/home/about">О компании</a>
     </div>
 </div>
 <div class="about_company">
