--- a/ReHouse.FrontEnd/Views/Home/Contacts.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Contacts.cshtml
@@ -11,12 +11,11 @@
 }
 <div class="navigation_string">
     <div class="way">
-        @Html.ActionLink("Главная", "index", "home")
+        <a href="/">Главная</a>
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("Контакты", "contacts", "home")
-
+        <a href="/home/contacts">Контакты</a>
     </div>
 </div>
 <div class="adress">
