--- a/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
@@ -7,11 +7,11 @@
 <span class="none">
     <div class="navigation_string">
         <div class="way">
-            @Html.ActionLink("Главная", "index", "home")
+            <a href="/">Главная</a>
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
-            @Html.ActionLink("Новострои", "index", "newbuilding")
+            <a href="/newbuilding">Новострои</a>
         </div>
     </div>
 </span>
