--- a/ReHouse.FrontEnd/Views/News/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/News/Index.cshtml
@@ -56,11 +56,11 @@
 
 <div class="navigation_string">
     <div class="way">
-        @Html.ActionLink("Главная", "index", "home")
+        <a href="/">Главная</a>
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("Новости", "index", "news")
+        <a href="/news">Новости</a>
     </div>
 </div>
 <div class="news">
