--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -50,11 +50,11 @@
                     {                        
                         if (item.Images != null && item.Images.Count > 0)
                         {
-                            <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
+                            <a class="fix" href="/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
                         }
                         else
                         {
-                            <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                            <a class="fix" href="/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                         }
                         <div class="min-content">
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -63,18 +63,18 @@
                             @*<h3>@item.TitleName</h3>*@
                             <h4>@item.Description</h4>
                             <p class="cost">@item.Price $</p>
-                            <a href="~/sale/detail/@item.Id" id="follow">❯</a>
+                            <a href="/sale/detail/@item.Id" id="follow">❯</a>
                         </div>
                     }
                     else
                     {                        
                         if (item.Images != null && item.Images.Count > 0)
                         {
-                            <a class="fix" href="~/rent/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
+                            <a class="fix" href="/rent/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
                         }
                         else
                         {
-                            <a class="fix" href="~/rent/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                            <a class="fix" href="/rent/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                         }
                         <div class="min-content">
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -82,14 +82,14 @@
                             @*<h3>@item.TitleName</h3>*@
                             <h4>@item.Description</h4>
                             <p class="cost">@item.Price грн/мес</p>
-                            <a href="~/rent/detail/@item.Id" id="follow">❯</a>
+                            <a href="/rent/detail/@item.Id" id="follow">❯</a>
                         </div>
                     }
 
                 </li>
             }
         </ul>
-        <a href="~/sale/flat" class="moremore" id="more">Подробнее</a>
+        <a href="/sale/flat" class="moremore" id="more">Подробнее</a>
     </div>
     <div class="streak"></div>
 
@@ -113,23 +113,23 @@
                     }
                     @if (item.Images != null && item.Images.Count > 0)
                     {
-                        <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
+                        <a class="fix" href="/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
                     }
                     else
                     {
-                        <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                        <a class="fix" href="/newbuilding/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                     }
                     <div class="min-content">
                         <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
                         <h3>@item.Name</h3>
                         <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
                         <p class="cost">от @item.Price грн/м²</p>
-                        <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
+                        <a href="/newbuilding/detail/@item.Id" id="follow">❯</a>
                     </div>
                 </li>
             }
         </ul>
-        <a href="~/newbuilding/index" id="more">Подробнее</a>
+        <a href="/newbuilding/index" id="more">Подробнее</a>
     </div>
     <div class="streak"></div>
 
@@ -153,11 +153,11 @@
                     }
                     @if (item.Images != null && item.Images.Count > 0)
                     {
-                        <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
+                        <a class="fix" href="/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
                     }
                     else
                     {
-                        <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                        <a class="fix" href="/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                     }
                     <div class="min-content">
                         <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -165,13 +165,13 @@
                         @*<h3>@item.TitleName</h3>*@
                         <h4>@item.Description</h4>
                         <p class="cost">@item.Price $</p>
-                        <a href="~/sale/detail/@item.Id" id="follow">❯</a>
+                        <a href="/sale/detail/@item.Id" id="follow">❯</a>
                     </div>
                 </li>
             }
 
         </ul>
-        <a href="~/sale/flat" id="more">Подробнее</a>
+        <a href="/sale/flat" id="more">Подробнее</a>
     </div>
     <div class="streak"></div>
 
@@ -195,11 +195,11 @@
                     }
                     @if (item.Images != null && item.Images.Count > 0)
                     {
-                        <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
+                        <a class="fix" href="/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
                     }
                     else
                     {
-                        <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                        <a class="fix" href="/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                     }
                     <div class="min-content">
                         <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -207,11 +207,11 @@
                         @*<h3>@item.TitleName</h3>*@
                         <h4>@item.Description</h4>
                         <p class="cost">@item.Price $</p>
-                        <a href="~/sale/detail/@item.Id" id="follow">❯</a>
+                        <a href="/sale/detail/@item.Id" id="follow">❯</a>
                     </div>
                 </li>
             }
         </ul>
-        <a href="~/sale/house" id="more">Подробнее</a>
+        <a href="/sale/house" id="more">Подробнее</a>
     </div>
 </div>
