--- a/ReHouse.FrontEnd/Views/Manager/Profile.cshtml
+++ b/ReHouse.FrontEnd/Views/Manager/Profile.cshtml
@@ -3,15 +3,15 @@
 
 <div class="navigation_string">
     <div class="way">
-        @Html.ActionLink("Главная", "index", "home")
+        <a href="/">Главная</a>
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("Менеджеры", "index", "manager")
+        <a href="/manager">Менеджеры</a>
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink(Model.FirstName ?? "Менеджер", "profile", "manager", new { id = Model.Id })
+        <a href="/manager/profile/@Model.Id">@(Model.FirstName ?? "Менеджер")</a>
     </div>
 </div>
 <div class="managers">
@@ -70,11 +70,11 @@
 
                             if (item.Images != null && item.Images.Count > 0)
                             {
-                                <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
+                                <a class="fix" href="/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
                             }
                             else
                             {
-                                <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                                <a class="fix" href="/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                             }
                             <div class="min-content">
                                 <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -83,7 +83,7 @@
                                 @*<h3>@item.TitleName</h3>*@
                                 <h4>@item.Description</h4>
                                 <p class="cost">@item.Price $</p>
-                                <a href="~/sale/detail/@item.Id" id="follow">❯</a>
+                                <a href="/sale/detail/@item.Id" id="follow">❯</a>
                             </div>
                         }
                         else
@@ -91,11 +91,11 @@
 
                             if (item.Images != null && item.Images.Count > 0)
                             {
-                                <a class="fix" href="~/rent/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
+                                <a class="fix" href="/rent/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
                             }
                             else
                             {
-                                <a class="fix" href="~/rent/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                                <a class="fix" href="/rent/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                             }
                             <div class="min-content">
                                 <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -110,7 +110,7 @@
                                 {
                                     <p class="cost">@item.Price $</p>
                                 }
-                                <a href="~/rent/detail/@item.Id" id="follow">❯</a>
+                                <a href="/rent/detail/@item.Id" id="follow">❯</a>
                             </div>
                         }
 
@@ -139,18 +139,18 @@
                         }
                         @if (item.Images != null && item.Images.Count > 0)
                         {
-                            <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
+                            <a class="fix" href="/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
                         }
                         else
                         {
-                            <a href="~/newbuilding/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                            <a href="/newbuilding/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                         }
                         <div class="min-content">
                             <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
                             <h3>@item.Name</h3>
                             <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
                             <p class="cost">от @item.Price грн/м²</p>
-                            <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
+                            <a href="/newbuilding/detail/@item.Id" id="follow">❯</a>
                         </div>
                     </li>
                 </div>
