--- a/ReHouse.FrontEnd/Views/Map/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Map/Index.cshtml
@@ -3,46 +3,46 @@
 
 <div class="navigation_string">
     <div class="way">
-        @Html.ActionLink("Главная", "index", "home")
+        <a href="/">Главная</a>
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("Карта сайта", "index", "map")
+        <a href="/map">Карта сайта</a>
     </div>
 </div>
 <div class="h2novostroy"><h2>Карта сайта <span>REHOUSE</span></h2></div>
 <div class="map_website">
     <ol type="1">
-        <li>@Html.ActionLink("1. Главная", "index", "home")</li>
+        <li><a href="/">1. Главная</a></li>
         <li>
             <a>2. Продажа</a>
             <ul>
-                <li>@Html.ActionLink("- Купить квартиру", "flat", "sale")</li>
-                <li>@Html.ActionLink("- Купить дом", "house", "sale")</li>
-                <li>@Html.ActionLink("- Купить участок", "homestead", "sale")</li>
-                <li>@Html.ActionLink("- Купить коммерцию", "commerce", "sale")</li>
+                <li><a href="/sale/flat">- Купить квартиру</a></li>
+                <li><a href="/sale/house">- Купить дом</a></li>
+                <li><a href="/sale/homestead">- Купить участок</a></li>
+                <li><a href="/sale/commerce">- Купить коммерцию</a></li>
             </ul>
         </li>
         <li>
             <a>3. Аренда</a>
             <ul>
-                <li>@Html.ActionLink("- Снять квартиру", "flat", "rent")</li>
-                <li>@Html.ActionLink("- Снять дом", "house", "rent")</li>
-                <li>@Html.ActionLink("- Снять коммерцию", "commerce", "rent")</li>
-                <li>@*@Html.ActionLink("- Снять участок", "homestead", "rent")*@</li>
+                <li><a href="/rent/flat">- Снять квартиру</a></li>
+                <li><a href="/rent/house">- Снять дом</a></li>
+                <li><a href="/rent/commerce">- Снять коммерцию</a></li>
+                <li>@*<a href="/rent/homestead">- Снять участок</a>*@</li>
             </ul>
         </li>
-        <li>@Html.ActionLink("4. Новострои", "index", "newbuilding")</li>
-        <li>@Html.ActionLink("5. Менеджеры", "index", "manager")</li>
+        <li><a href="/newbuilding">4. Новострои</a></li>
+        <li><a href="/manager">5. Менеджеры</a></li>
         <li>
             <a>6. О нас</a>
             <ul>
-                <li><a href="#">- О компании</a></li>
-                <li><a href="#">- Вакансии агентства</a></</li>
+                <li><a href="/home/about">- О компании</a></li>
+                <li><a href="/vacancy">- Вакансии агентства</a></</li>
             </ul>
         </li>
-        <li>@Html.ActionLink("7. Новости", "index", "news")</li>
-        <li>@Html.ActionLink("8. Отзывы", "index", "feedback")</li>
-        <li><a href="#">9. Обратная связь</a></li>
+        <li><a href="/news">7. Новости</a></li>
+        <li><a href="/feedback">8. Отзывы</a></li>
+        <li><a href="email">9. Обратная связь</a></li>
     </ol>
 </div>
