--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -31,15 +31,15 @@
     <span class="none">
         <div class="navigation_string">
             <div class="way">
-                @Html.ActionLink("Главная", "index", "home")
+                <a href="/">Главная</a>
                 <pre> </pre>
                 <p>/</p>
                 <pre> </pre>
-                @Html.ActionLink("Новострои", "index", "newbuilding")
+                <a href="/newbuilding">Новострои</a>
                 <pre> </pre>
                 <p>/</p>
                 <pre> </pre>
-                @Html.ActionLink(Model.NewBuilding.Name, "detail", "newbuilding", new { id = Model.NewBuilding.Id })
+                <a href="/newbuilding/detail/@Model.NewBuilding.Id">@Model.NewBuilding.Name</a>
             </div>
         </div>
     </span>
@@ -51,7 +51,7 @@
         <a onclick="addtocart(@Model.NewBuilding.Id, '@AdvertsType.NewBuilding', true, this);" id="fav2"></a>
     </div>
     <div class="favorite1">
-        <a href="~/email/index?flat=@(Model.NewBuilding.Id)&type=@((int)AdvertsType.NewBuilding)" id="favorite">Подать заявку</a>
+        <a href="/email/index?flat=@(Model.NewBuilding.Id)&type=@((int)AdvertsType.NewBuilding)" id="favorite">Подать заявку</a>
     </div>
 </div>
 <div class="share_icons">
@@ -257,18 +257,18 @@
                         }
                         @if (item.Images != null && item.Images.Count > 0)
                         {
-                            <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
+                            <a class="fix" href="/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
                         }
                         else
                         {
-                            <a href="~/newbuilding/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                            <a href="/newbuilding/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                         }
                         <div class="min-content">
                             <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
                             <h3>@item.Name</h3>
                             <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
                             <p class="cost">от @item.Price грн/м²</p>
-                            <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
+                            <a href="/newbuilding/detail/@item.Id" id="follow">❯</a>
                         </div>
                     </li>
                 </div>
