--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -32,7 +32,7 @@
 
         <div class="navigation_string">
             <div class="way">
-                @Html.ActionLink("Главная", "Index", "Home")
+                <a href="/">Главная</a>
                 <pre> </pre>
                 <p>/</p>
                 <pre> </pre>
@@ -62,11 +62,11 @@
                     break;
             }
 
-                @Html.ActionLink(desc, action, "sale")
+                <a href="/sale/@action">@desc</a>
                 <pre> </pre>
                 <p>/</p>
                 <pre> </pre>
-                <a href="~/sale/@action/@Model.Advert.Category.Id">@Model.Advert.Category.RussianName</a>
+                <a href="/sale/@action/@Model.Advert.Category.Id">@Model.Advert.Category.RussianName</a>
             </div>
         </div>
     </span>
@@ -79,7 +79,7 @@
         <a onclick="addtocart(@Model.Advert.Id, '@Model.Advert.Type', true, this);" id="fav2"></a>
     </div>
     <div class="favorite1">
-        <a href="~/email/index" id="favorite">Подать заявку</a>
+        <a href="/email" id="favorite">Подать заявку</a>
     </div>
 </div>
 <div class="share_icons">
@@ -285,11 +285,11 @@
                         }
                         @if (item.Images != null && item.Images.Count > 0)
                         {
-                            <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212" /></a>
+                            <a class="fix" href="/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212" /></a>
                         }
                         else
                         {
-                            <a href="~/sale/detail/@item.Id" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
+                            <a href="/sale/detail/@item.Id" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
                         }
                         <div class="min-content">
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -297,7 +297,7 @@
                             @*<h3>@item.TitleName</h3>*@
                             <h4>@item.Description</h4>
                             <p class="cost">@item.Price $</p>
-                            <a href="~/sale/detail/@item.Id" id="follow">❯</a>
+                            <a href="/sale/detail/@item.Id" id="follow">❯</a>
                         </div>
                     </li>
                 </div>
