--- a/ReHouse.FrontEnd/Views/Sale/Flat.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Flat.cshtml
@@ -10,11 +10,11 @@
 
     <div class="navigation_string">
         <div class="way">
-            @Html.ActionLink("Главная", "index", "home")
+            <a href="/">Главная</a>
             <pre> </pre>
             <p>/</p>
             <pre> </pre>
-            @Html.ActionLink("Купить квартиру", "flat", "sale")
+            <a href="/sale/flat">Купить квартиру</a>
         </div>
     </div>
 </span>
@@ -30,7 +30,7 @@
     <form>
         @foreach (var category in Model.Categories)
             {
-            <a href="~/sale/flat/@category.Id">@category.RussianName</a>
+            <a href="/sale/flat/@category.Id">@category.RussianName</a>
         }
     </form>
 </div>
