--- a/ReHouse.FrontEnd/Views/Search/Flats.cshtml
+++ b/ReHouse.FrontEnd/Views/Search/Flats.cshtml
@@ -3,11 +3,11 @@
 
 <div class="navigation_string">
     <div class="way">
-        @Html.ActionLink("Главная", "index", "home")
+        <a href="/">Главная</a>
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("Поиск", "flats", "search")
+        <a href="/search/flats">Поиск</a>
     </div>
 </div>
 <div class="h2novostroy"><h2>Найденные объявления</h2></div>
