--- a/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
@@ -23,11 +23,11 @@
                 {
                     if (item.Images != null && item.Images.Count > 0)
                     {
-                        <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
+                        <a class="fix" href="/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
                     }
                     else
                     {
-                        <a href="~/sale/detail/@item.Id" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
+                        <a href="/sale/detail/@item.Id" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
                     }
                     <div class="min-content">
                         <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -36,18 +36,18 @@
                         @*<h3>@item.TitleName</h3>*@
                         <h4>@item.Description</h4>
                         <p class="cost">@item.Price $</p>
-                        <a href="~/sale/detail/@item.Id" id="follow">❯</a>
+                        <a href="/sale/detail/@item.Id" id="follow">❯</a>
                     </div>
                 }
                 else
                 {
                     if (item.Images != null && item.Images.Count > 0)
                     {
-                        <a class="fix" href="~/rent/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
+                        <a class="fix" href="/rent/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
                     }
                     else
                     {
-                        <a href="~/rent/detail/@item.Id" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
+                        <a href="/rent/detail/@item.Id" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
                     }
                     <div class="min-content">
                         <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -62,7 +62,7 @@
                         {
                             <p class="cost">@item.Price $</p>
                         }
-                        <a href="~/rent/detail/@item.Id" id="follow">❯</a>
+                        <a href="/rent/detail/@item.Id" id="follow">❯</a>
                     </div>
                 }
             </li>
