--- a/ReHouse.FrontEnd/Views/Shared/Search/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Search/_listOfAdverts.cshtml
@@ -23,11 +23,11 @@
                 {
                     if (item.Image != null)
                     {
-                        <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Image.Url + item.Image.FileName)" title="@item.Image.Title" alt="@item.Image.Alt" width="250" height="212"/></a>
+                        <a class="fix" href="/sale/detail/@item.Id"><img src="@Url.Content(item.Image.Url + item.Image.FileName)" title="@item.Image.Title" alt="@item.Image.Alt" width="250" height="212"/></a>
                     }
                     else
                     {
-                        <a href="~/sale/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                        <a href="/sale/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                     }
                     <div class="min-content">
                         <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -36,36 +36,36 @@
                         @*<h3>@item.Name</h3>*@
                         <h4>@item.Description</h4>
                         <p class="cost">@item.Price $</p>
-                        <a href="~/sale/detail/@item.Id" id="follow">❯</a>
+                        <a href="/sale/detail/@item.Id" id="follow">❯</a>
                     </div>
                 }
                 else if (item.Type == ReHouse.Utils.Helpers.AdvertsType.NewBuilding)
                 {
                     if (item.Image != null)
                     {
-                        <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Image.Url + item.Image.FileName)" title="@item.Image.Title" alt="@item.Image.Alt" width="250" height="212"/></a>
+                        <a class="fix" href="/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Image.Url + item.Image.FileName)" title="@item.Image.Title" alt="@item.Image.Alt" width="250" height="212"/></a>
                     }
                     else
                     {
-                        <a href="~/newbuilding/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                        <a href="/newbuilding/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                     }
                     <div class="min-content">
                         <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
                         <h3>@item.Name</h3>
                         <h4>@item.Adress <br />Сдача: @item.Description</h4>
                         <p class="cost">от @item.Price грн/м²</p>
-                        <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
+                        <a href="/newbuilding/detail/@item.Id" id="follow">❯</a>
                     </div>
                 }
                 else
                 {
                     if (item.Image != null)
                     {
-                        <a class="fix" href="~/rent/detail/@item.Id"><img src="@Url.Content(item.Image.Url + item.Image.FileName)" title="@item.Image.Title" alt="@item.Image.Alt" width="250" height="212"/></a>
+                        <a class="fix" href="/rent/detail/@item.Id"><img src="@Url.Content(item.Image.Url + item.Image.FileName)" title="@item.Image.Title" alt="@item.Image.Alt" width="250" height="212"/></a>
                     }
                     else
                     {
-                        <a href="~/rent/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                        <a href="/rent/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                     }
                     <div class="min-content">
                         <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -80,7 +80,7 @@
                         {
                             <p class="cost">@item.Price $</p>
                         }
-                        <a href="~/rent/detail/@item.Id" id="follow">❯</a>
+                        <a href="/rent/detail/@item.Id" id="follow">❯</a>
                     </div>
                 }
             </li>
